<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_mobile"
    app:startDestination="@id/navigation_map_view">
    >

    <fragment
        android:id="@+id/navigation_map_view"
        android:name="com.francotte.go4lunch_opc.ui.fragments.MapViewFragment"
        android:label="@string/title_Map_View"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/navigation_list_view"
        android:name="com.francotte.go4lunch_opc.ui.fragments.ListViewFragment"
        android:label="@string/title_List_View"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.francotte.go4lunch_opc.ui.fragments.WorkmatesFragment"
        android:label="@string/title_Workmates"
        tools:layout="@layout/fragment_workmates" >
    </fragment>

</navigation>
