<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_activity_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="5dp"
            android:background="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/settings_activity_title_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_text_notification"
        android:layout_margin="8dp"
        style="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintTop_toBottomOf="@id/main_activity_appbar"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_activity_notification_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/settings_activity_text_notification"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_title_notification"/>


    <TextView
        android:id="@+id/settings_activity_title_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_text_account"
        android:layout_margin="8dp"
        style="@style/TextAppearance.MaterialComponents.Overline"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_notification_switch"/>

    <ImageView
        android:id="@+id/settings_activity_icon_user_account"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_person_outline_24"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_title_account"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/settings_activity_name_user_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_name_user"
        android:layout_marginStart="8dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@id/settings_activity_icon_user_account"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_title_account"/>

    <TextView
        android:id="@+id/settings_activity_email_user_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_email_user"
        android:layout_marginStart="8dp"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toEndOf="@id/settings_activity_icon_user_account"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_name_user_account"/>

    <Button
        android:id="@+id/settings_activity_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/settings_activity_button_delete_account"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_icon_user_account"/>


</androidx.constraintlayout.widget.ConstraintLayout>