<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.DetailRestaurantActivity"
    tools:showIn="@layout/activity_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp">

            <TextView
                android:id="@+id/details_activity_name_of_restaurant"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom du resto"
                android:textColor="@color/colorBlank"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />


            <ImageView
                android:id="@+id/item_list_restaurant_star_1_image"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_star_2"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/details_activity_name_of_restaurant"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/details_activity_name_of_restaurant"
                app:layout_constraintTop_toTopOf="@+id/details_activity_name_of_restaurant" />

            <ImageView
                android:id="@+id/item_list_restaurant_star_2_image"
                style="@style/item_list_restaurant_stars_2_3_image"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="@+id/details_activity_name_of_restaurant"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/item_list_restaurant_star_1_image"
                app:layout_constraintTop_toTopOf="@+id/details_activity_name_of_restaurant" />

            <ImageView
                android:id="@+id/item_list_restaurant_star_3_image"
                style="@style/item_list_restaurant_stars_2_3_image"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="@+id/details_activity_name_of_restaurant"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/item_list_restaurant_star_2_image"
                app:layout_constraintTop_toTopOf="@+id/details_activity_name_of_restaurant" />


            <TextView
                android:id="@+id/details_activity_information_of_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="type de restaurant - adresse du restaurant"
                android:textColor="@color/colorBlank"
                app:layout_constraintTop_toBottomOf="@id/details_activity_name_of_restaurant" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/detail_activity_call_place_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_call_24" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_activity_button_call"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_activity_favorite_place_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/detail_activity_favorite_place_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_star_24" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_activity_button_like"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_activity_website_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_language_24" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_activity_button_website"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_activity_workmates_of_place_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_workmate" />
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>